--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,15 @@ addons:
       - zlib1g-dev
       - libbz2-dev
 
+before_install:
+  - pip install --user cpp-coveralls
+
 install: true
 
 script:
     - make
-    - make test
+    - make test COVERAGE=yes
     - make validate
+
+after_success:
+  - coveralls --exclude tests --gcov-options '\-lp'
