--- a/tests/regression/demultiplexing/double_indexed/se/threads/three/your_output.sample_2.settings
+++ b/tests/regression/demultiplexing/double_indexed/se/threads/three/your_output.sample_2.settings
@@ -18,7 +18,7 @@ Adapter2[1]: CATCGGCG_AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGTAGATCTCGGTGGTCGCCGTATCATT
 
 
 [Adapter trimming]
-RNG seed: 356769071
+RNG seed: NA
 Alignment shift value: 2
 Global mismatch threshold: 0.333333
 Quality format (input): Phred+33
