--- a/tests/regression/pe/incl_adapter/threads/three/your_output.settings
+++ b/tests/regression/pe/incl_adapter/threads/three/your_output.settings
@@ -8,7 +8,7 @@ Adapter2[1]: AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGTAGATCTCGGTGGTCGCCGTATCATT
 
 
 [Adapter trimming]
-RNG seed: 372265332
+RNG seed: NA
 Alignment shift value: 2
 Global mismatch threshold: 0.333333
 Quality format (input): Phred+33
