--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,34 @@
-language: cpp
-
 dist: trusty
 
-compiler:
-  - clang
-  - gcc
+language: python
+python:
+  # We don't actually use the Travis Python, but this keeps it organized.
+  - "2.6"
+  - "2.7"
+  - "3.3"
+  - "3.4"
+install:
+  - sudo apt-get update
+  # You may want to periodically update this, although the conda update
+  # conda line below will keep everything up-to-date.  We do this
+  # conditionally because it saves us some downloading if the version is
+  # the same.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
 
-os:
- - linux
- - osx
-
-addons:
-  apt:
-    packages:
-      - zlib1g-dev
-      - libbz2-dev
-
-before_install:
-  - pip3 install --user cpp-coveralls
-
-install: true
+  # Replace dep1 dep2 ... with your dependencies
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+  - source activate test-environment
 
 script:
-    - make
-    - make test COVERAGE=yes
-    - make regression
-    - PATH=$PATH:$PWD/build/ make -C examples
-
-after_success:
-  - coveralls --exclude tests --gcov-options '\-lp'
+  conda install -c maxibor adapterremoval2
