--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
       - zlib1g-dev
       - python3
       - python3-pip
+      - python3-setuptools
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then python3 -m pip install --user cpp-coveralls; fi
