--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,10 @@ addons:
       - python3
       - python3-pip
       - python3-setuptools
+      - python3-wheel
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then python3 -m pip install --user cpp-coveralls; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then python3 -m pip install --user pyOpenSSL==20.0 cryptography==3.2.1 cpp-coveralls; fi
 
 install: true
 
@@ -35,4 +36,4 @@ script:
     - PATH=$PATH:$PWD/build/ make -C examples
 
 after_success:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then python3 -m coveralls --exclude tests --gcov-options '\-lp'; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then coveralls --exclude tests --gcov-options '\-lp'; fi
