--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ install: true
 
 script:
     - make LIBDEFLATE=no
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test COVERAGE=yes; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make test COVERAGE=no; fi
-    - make regression
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test COVERAGE=yes LIBDEFLATE=no; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make test COVERAGE=no LIBDEFLATE=no; fi
+    - make regression LIBDEFLATE=no
     - PATH=$PATH:$PWD/build/ make -C examples
 
 after_success:
