simplify test matrix
g++ seems to be an alias for clang++ on OSX, though gcc should be
available according to runner documentation.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,11 +12,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-18.04, macos-11 ]
-        cxx: [ g++, clang++ ]
         include:
           - os: ubuntu-18.04
+            cxx: g++
+          - os: ubuntu-18.04
+            cxx: clang++
           - os: macos-11
+            cxx: clang++
     env:
       CXX: ${{ matrix.cxx }}
       COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
