fix use of old terminology/argument names

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,7 @@
 EXE := adapterremoval3
 
 TARGETS := single_end paired_end phred_64_encoded \
-	collapsed_q50 multiple_adapters identify_adapters \
+	merged_q50 multiple_adapters identify_adapters \
 	interleaved_input interleaved_output interleaved_input_and_output \
 	demultiplexing demultiplexing_only
 
@@ -16,7 +16,7 @@ single_end:
 	$(EXE) --file1 reads_1.fq --basename output_single --trimns --trimqualities --gzip
 
 paired_end:
-	$(EXE) --file1 reads_1.fq --file2 reads_2.fq --basename output_paired --trimns --trimqualities --collapse
+	$(EXE) --file1 reads_1.fq --file2 reads_2.fq --basename output_paired --trimns --trimqualities --merge
 
 interleaved_input:
 	$(EXE) --interleaved-input --file1 interleaved.fq --basename output_interleaved_input
@@ -30,11 +30,11 @@ interleaved_input_and_output:
 phred_64_encoded:
 	$(EXE) --qualitybase 64 --file1 reads_q64.fq --basename output_phred_64
 
-collapsed_q50:
-	$(EXE) --qualitymax 50 --file1 reads_1.fq --file2 reads_2.fq --collapse --basename output_collapsed_q50
+merged_q50:
+	$(EXE) --qualitymax 50 --file1 reads_1.fq --file2 reads_2.fq --merge --basename output_merged_q50
 
 multiple_adapters:
-	$(EXE) --file1 reads_1.fq --file2 reads_2.fq --basename output_multi --trimns --trimqualities --collapse --adapter-list adapters.txt
+	$(EXE) --file1 reads_1.fq --file2 reads_2.fq --basename output_multi --trimns --trimqualities --merge --adapter-list adapters.txt
 
 identify_adapters:
 	$(EXE) --identify-adapters --file1 reads_1.fq --file2 reads_2.fq
