--- a/examples/Makefile
+++ b/examples/Makefile
@@ -13,34 +13,34 @@ clean:
 	rm -f output_*
 
 single_end:
-	$(EXE) --file1 reads_1.fq --basename output_single --trimns --trimqualities --gzip
+	$(EXE) --file1 reads_1.fastq --basename output_single --trimns --trimqualities --gzip
 
 paired_end:
-	$(EXE) --file1 reads_1.fq --file2 reads_2.fq --basename output_paired --trimns --trimqualities --merge
+	$(EXE) --file1 reads_1.fastq --file2 reads_2.fastq --basename output_paired --trimns --trimqualities --merge
 
 interleaved_input:
-	$(EXE) --interleaved-input --file1 interleaved.fq --basename output_interleaved_input
+	$(EXE) --interleaved-input --file1 interleaved.fastq --basename output_interleaved_input
 
 interleaved_output:
-	$(EXE) --interleaved-output --file1 reads_1.fq --file2 reads_2.fq --basename output_interleaved_output
+	$(EXE) --interleaved-output --file1 reads_1.fastq --file2 reads_2.fastq --basename output_interleaved_output
 
 interleaved_input_and_output:
-	$(EXE) --interleaved --file1 interleaved.fq --basename output_interleaved_both
+	$(EXE) --interleaved --file1 interleaved.fastq --basename output_interleaved_both
 
 phred_64_encoded:
-	$(EXE) --qualitybase 64 --file1 reads_q64.fq --basename output_phred_64
+	$(EXE) --qualitybase 64 --file1 reads_q64.fastq --basename output_phred_64
 
 merged_q50:
-	$(EXE) --qualitymax 50 --file1 reads_1.fq --file2 reads_2.fq --merge --basename output_merged_q50
+	$(EXE) --qualitymax 50 --file1 reads_1.fastq --file2 reads_2.fastq --merge --basename output_merged_q50
 
 multiple_adapters:
-	$(EXE) --file1 reads_1.fq --file2 reads_2.fq --basename output_multi --trimns --trimqualities --merge --adapter-list adapters.txt
+	$(EXE) --file1 reads_1.fastq --file2 reads_2.fastq --basename output_multi --trimns --trimqualities --merge --adapter-list adapters.txt
 
 identify_adapters:
-	$(EXE) --identify-adapters --file1 reads_1.fq --file2 reads_2.fq
+	$(EXE) --identify-adapters --file1 reads_1.fastq --file2 reads_2.fastq
 
 demultiplexing:
-	$(EXE) --file1 demux_1.fq --file2 demux_2.fq --basename output_demux --barcode-list barcodes.txt
+	$(EXE) --file1 demux_1.fastq --file2 demux_2.fastq --basename output_demux --barcode-list barcodes.txt
 
 demultiplexing_only:
-	$(EXE) --file1 demux_1.fq --file2 demux_2.fq --basename output_only_demux --barcode-list barcodes.txt --demultiplex-only
+	$(EXE) --file1 demux_1.fastq --file2 demux_2.fastq --basename output_only_demux --barcode-list barcodes.txt --demultiplex-only
