require python3 before installing sphinx

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -43,17 +43,16 @@ jobs:
       - name: make regression
         run: make regression VERBOSE=yes DEBUG=yes SANITIZE=yes COVERAGE=${{ matrix.coverage }}
 
-      - name: dependencies
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: sphinx
         run: python3 -m pip install sphinx
       - name: make install
         run: make install VERBOSE=yes DEBUG=yes SANITIZE=yes COVERAGE=${{ matrix.coverage }} PREFIX=${PWD}/install
 
       # Coverage statistics
-      - if: ${{ matrix.coverage == 'yes' }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
-
       - name: setup coveralls
         if: ${{ matrix.coverage == 'yes' }}
         run: |
