run CI on the latest MacOS version
The older ubuntu runner is retained for now, since one of the goals is to ensure backwards compatibility

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,7 +19,7 @@ jobs:
           - os: ubuntu-22.04
             cxx: clang++
             coverage: "no"
-          - os: macos-11
+          - os: macos-latest
             cxx: clang++
             coverage: "no"
       # Do not auto-cancel other runners if one fails
@@ -38,7 +38,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-22.04' }}
         run: sudo apt-get install zlib1g-dev libisal-dev libdeflate-dev
       - name: dependencies
-        if: ${{ matrix.os == 'macos-11' }}
+        if: ${{ matrix.os == 'macos-latest' }}
         run: brew install isa-l libdeflate
 
       - name: make test
