disable OSX CI for now

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,9 +19,9 @@ jobs:
           - os: ubuntu-22.04
             cxx: clang++
             coverage: "no"
-          - os: macos-latest
-            cxx: clang++
-            coverage: "no"
+          # - os: macos-latest
+          #   cxx: clang++
+          #   coverage: "no"
       # Do not auto-cancel other runners if one fails
       fail-fast: false
     env:
