update examples make taret

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -28,7 +28,7 @@ interleaved_input_and_output:
 	$(EXE) --interleaved --file1 interleaved.fastq --basename output_interleaved_both
 
 phred_64_encoded:
-	$(EXE) --qualitybase 64 --file1 reads_q64.fastq --basename output_phred_64
+	$(EXE) --quality-format 64 --file1 reads_q64.fastq --basename output_phred_64
 
 merged:
 	$(EXE) --qualitymax 50 --file1 reads_1.fastq --file2 reads_2.fastq --merge --basename output_merged
@@ -37,7 +37,7 @@ multiple_adapters:
 	$(EXE) --file1 reads_1.fastq --file2 reads_2.fastq --basename output_multi --adapter-list adapters.txt
 
 identify_adapters:
-	$(EXE) --identify-adapters --file1 reads_1.fastq --file2 reads_2.fastq
+	$(EXE) --report-only --file1 reads_1.fastq --file2 reads_2.fastq --basename output_adapters
 
 demultiplexing:
 	$(EXE) --file1 demux_1.fastq --file2 demux_2.fastq --basename output_demux --barcode-list barcodes.txt
