use meson in static build container

--- a/meson.build
+++ b/meson.build
@@ -129,18 +129,9 @@ if container_runner.found()
             'run',
             '--rm',
             '-t',
-            '--mount', 'type=bind,src=@0@/,dst=/root/adapterremoval/'.format(meson.current_source_dir()),
-            '--mount', 'type=bind,src=@0@/,dst=/root/build'.format(meson.current_build_dir()),
+            '--mount', 'type=bind,src=@0@/,dst=/root/src/'.format(meson.current_source_dir()),
+            '--mount', 'type=bind,src=@0@/,dst=/root/out/'.format(meson.current_build_dir()),
             container_name,
-            'regression',
-            'examples',
-            'test',
-            'install',
-            'BUILD_DIR=/root/build',
-            'DESTDIR=/root/build/install',
-            'VERBOSE=yes',
-            'COLOR=no',
-            'STATIC=yes',
         ],
     )
 endif
