print regression test paths relative to source root

--- a/tests/regression/meson.build
+++ b/tests/regression/meson.build
@@ -101,6 +101,7 @@ foreach test : regression_tests
             '--use-colors', 'always',
             '--json-schema', meson.project_source_root() / 'schema.json',
             '--executable', exe.full_path(),
+            '--source-root', meson.project_source_root(),
         ],
         depends: [exe],
         suite: ['regression'],
@@ -118,6 +119,7 @@ custom_target(
         '--schema-validation-required',
         '--json-schema', meson.project_source_root() / 'schema.json',
         '--executable', exe.full_path(),
+        '--source-root', meson.project_source_root(),
     ],
     output: 'update-regression',
     console: true,
