--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -27,12 +27,16 @@ jobs:
     env:
       CXX: ${{ matrix.cxx }}
       COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+      UV_SYSTEM_PYTHON: 1
 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
+      - uses: astral-sh/setup-uv@v5
+        with:
+          version: "latest"
 
       - name: dependencies (libraries)
         if: ${{ matrix.os == 'ubuntu-22.04' }}
@@ -43,29 +47,29 @@ jobs:
         run: brew install isa-l libdeflate
 
       - name: dependencies (pip)
-        run: python3 -m pip install meson ninja jsonschema sphinx
+        run: uv pip install meson ninja jsonschema sphinx
 
       - name: setup
-        run: meson setup builddir -Db_sanitize=address,undefined -Db_coverage=${{ matrix.coverage }}
+        run: meson setup build -Db_sanitize=address,undefined -Db_coverage=${{ matrix.coverage }}
 
       - name: install
-        run: DESTDIR=${PWD}/install meson install -C builddir
+        run: DESTDIR=${PWD}/install meson install -C build
 
       - name: examples
-        run: make -C examples EXE=${PWD}/builddir/src/adapterremoval3
+        run: make -C examples EXE=${PWD}/build/src/adapterremoval3
 
       - name: regression tests
-        run: meson test -C builddir --suite regression --print-errorlogs
+        run: meson test -C build --suite regression --print-errorlogs
 
       # Unit tests are run last to enable cleanup of coverage data from other
       # actions before running coveralls
       - name: unit tests
         run: |
           find . -name '*.gcda' -print -delete
-          meson test -C builddir --suite unit --print-errorlogs
+          meson test -C build --suite unit --print-errorlogs
 
       - name: coveralls
         if: ${{ matrix.coverage == 'true' && github.event_name == 'push' }}
         run: |
-          python3 -m pip install cpp-coveralls
-          coveralls --exclude tests --root . --build-root builddir --gcov-options '\-lpbc'
+          uv pip install cpp-coveralls
+          coveralls --exclude tests --root . --build-root build --gcov-options '\-lpbc'
